# chef

./: .gitignore  .gitmodules  :w  Cargo.toml  Makefile  README.md  default.nix  flake.nix  ideas.md  job-gen.nix  jobs.nix  todo.md
chef/: .gitignore  Cargo.toml  record.sh  todo.md
chef-compiler/: Cargo.toml  default.nix  ideas.md  test.sh  todo.md
chef-compiler/proc_macros/make_tests/: Cargo.toml
chef-compiler/src/: .main.rs.rustfmt
chef-compiler/src/ast/: constant_evaluator.rs  lexer.rs  mod.rs  parser.rs  python_macro.rs  visitors.rs
chef-compiler/src/blueprint/: mod.rs
chef-compiler/src/cli/: mod.rs
chef-compiler/src/compiler/: graph.rs  graph_compiler.rs  graph_visualizer.rs  mod.rs  signal_assigner.rs
chef-compiler/src/text/: mod.rs
chef-compiler/stdlib/: std.rcp
chef-inspector/: Cargo.toml  default.nix
chef-inspector/samples/: circuit_building_blocks.txt  circuits.txt  digit_display.txt
chef-inspector/src/: cli.rs  gui.rs  main.rs
chef-lang/: .gitignore  Cargo.toml  default.nix  factorio-tests.txt  ideas.md  record.sh  shell.nix  test.sh  todo.md
chef-lang/example_outputs/: counter-def.dot  link_block.dot  multipule_block_copies.dot  when.dot
chef-lang/examples/: arithmetic.output.dot  arithmetic.rcp  assignments.rcp  block_link.rcp  booleans.output.dot  booleans.rcp  comments.output.dot  comments.rcp  constant_evaluation.output.dot  constant_evaluation.rcp  constants.rcp  counter-def.output.dot  counter-def.rcp  counter.output.dot  counter.rcp  counter.rcp.ignore  counter_def.rcp  delay.rcp  dynamic_blocks.rcp  import.output.dot  import.rcp  import_python.rcp  imported.ing  imported.rcp  lib.py  link_block.output.dot  link_block.rcp  many.rcp  multiple_block_copies.output.dot  multiple_block_copies.rcp  multiple_outputs.rcp  picking.output.dot  picking.rcp  script_dyn_block.rcp  shift_register.rcp  simple_block.output.dot  simple_block.rcp  size.rcp  tuples.rcp  type_inference.rcp  (+7 more)
chef-lang/make_tests/: .gitignore  Cargo.toml
chef-lang/make_tests/src/: lib.rs
chef-lang/proc_macros/make_visitors/: Cargo.toml
chef-lang/proc_macros/src/: lib.rs
chef-lang/proc_macros/static_files/: Cargo.toml
chef-lang/src/: main.rs  tests.rs
chef-lang/src/ast/: constant_evaluator.rs  determiner.rs  lexer.rs  mod.rs  parser.rs  python_macro.rs  type_checker.rs  visitors.rs
chef-lang/src/blueprint/: mod.rs
chef-lang/src/blueprint_converter/: blueprint_graph.rs  mod.rs
chef-lang/src/cli/: mod.rs
chef-lang/src/compiler/: graph.rs  graph_compiler.rs  graph_optimizer.rs  graph_visualizer.rs  mod.rs  signal_assigner.rs
chef-lang/src/diagnostics/: mod.rs  printer.rs
chef-lang/src/gui/: mod.rs
chef-lang/src/simulator/: mod.rs  visualizer.rs
chef-lang/src/tests/: compilation.rs  examples.rs  mod.rs  simulation.rs
chef-lang/src/text/: mod.rs
chef-lang/src/the_chef/: advice.txt
chef-lang/src/utils/: base.signals  import_signals.rs  mod.rs
chef-lang/todo/: idea.rcp
chef/example_outputs/: arithmetic.dot  booleans.dot  comments.dot  constant_evaluation.dot  counter.dot  link_block.dot  multipule_block_copies.dot  picking.dot  simple_block.dot  test.dot  var_variables.dot  when.dot  when_simple.dot
chef/examples/: arithmetic.rcp  booleans.rcp  comments.rcp  constant_evaluation.rcp  counter.rcp  link_block.rcp  multipule_block_copies.rcp  picking.rcp  simple_block.rcp  test.rcp  var_variables.rcp  when.rcp  when_simple.rcp
chef/src/: main.rs
chef/src/ast/: base.signals  constant_evaluator.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs  visitors.rs
chef/src/blueprint_converter/: blueprint_graph.rs  mod.rs
chef/todo/: when.rcp
(+95 files in other folders)
