[package]
name = "chef"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
directories = "5.0.1"
factorio-blueprint = "0.3.0"
noisy_float = "0.1" # We need this lower version to interact with 'factorio-blueprint'
fnv = "1.0.7"
graphviz-rust = "0.9.0"
rand = "0.8.5"
termion = "3.0.0"
jsonxf = "1.1.1"
static_files = { path = "./proc_macros/static_files" }

[dev-dependencies]
prettydiff = "0.6.4"
pretty_assertions = "1.4.0"
quote = "1.0.9"
make_tests = { path = "./proc_macros/make_tests" }
