[package]
name = "chef-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
factorio-blueprint = { path = "./external/factorio-blueprint" }
# noisy_float = "0.1" # We need this lower version to interact with 'factorio-blueprint'
eframe = { version = "0.28.1" }
