[package]
name = "chef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
cli-clipboard = "0.4.0"
directories = "5.0.1"
factorio-blueprint = "0.3.0"
fnv = "1.0.7"
graphviz-rust = "0.6.2"
lazy_static = "1.4.0"
noisy_float = "0.1"
rand = "0.8.5"
terminal_size = "0.2.6"
termion = "2.0.1"

[dev-dependencies]
prettydiff = "0.6.4"
proc_macros = { path = "./proc_macros" }
