[package]
name = "chef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
cli-clipboard = "0.4.0"
directories = "5.0.1"
factorio-blueprint = "0.3.0"
noisy_float = "0.1" # We need this lower version to interact with 'factorio-blueprint'
fnv = "1.0.7"
graphviz-rust = "0.7.0"
lazy_static = "1.4.0"
rand = "0.8.5"
termion = "3.0.0"

[dev-dependencies]
prettydiff = "0.6.4"
pretty_assertions = "1.4.0"
proc_macros = { path = "./proc_macros" }
