[package]
name = "chef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
factorio-blueprint = "0.3.0"
fnv = "1.0.7"
gumdrop = "0.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
terminal_size = "0.2.6"
termion = "2.0.1"
